post card ready

--- a/insta-clone/src/App.css
+++ b/insta-clone/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App{
-  background-color: darkslategrey;
+  /* background-color: darkslategrey; */
   height: 100vh;
 }
 .app__header{
@@ -16,4 +16,5 @@
   block-size: 50px;
   padding: 10px 20px;
 }
+
 
